fixies previous merge

--- a/src/components.cognex.vision/app/ix-blazor/Pages/Documentation.razor
+++ b/src/components.cognex.vision/app/ix-blazor/Pages/Documentation.razor
@@ -12,12 +12,12 @@
     <div class="container text-left">
         <div class="col">
             //<CognexInsightRenderedView>
-            <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.MyInsight" Presentation="Command" />
+                <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.Insight" Presentation="Command" />
             //</CognexInsightRenderedView>
         </div>
         <div class="col">
             //<CognexDatamanRenderedView>
-            <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.MyDataman1" Presentation="Command" />
+                <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.Dataman" Presentation="Command" />
             //</CognexDatamanRenderedView>
         </div>
     </div>
