--- a/src/components.cognex.vision/app/ix-blazor/Pages/Testing.razor
+++ b/src/components.cognex.vision/app/ix-blazor/Pages/Testing.razor
@@ -16,19 +16,19 @@
                 <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.ActivateManualControl" Presentation="Control" />
             </div>
             <div class="col">
-                <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.MyInsight._isManuallyControllable" Presentation="Display" />
+                <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.Insight._isManuallyControllable" Presentation="Display" />
             </div>
             <div class="col">
-                <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.MyDataman1._isManuallyControllable" Presentation="Display" />
+                <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.Dataman._isManuallyControllable" Presentation="Display" />
             </div>
           
         </div>
         
         <div class="col">
-            <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.MyInsight" Presentation="Command" />
+            <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.Insight" Presentation="Command" />
         </div>
         <div class="col">
-            <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.MyDataman1" Presentation="Command" />
+            <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.Dataman" Presentation="Command" />
         </div>
        
     </div>
