--- a/src/components.elements/app/ix-blazor/ElementsComponents.blazor/App.razor
+++ b/src/components.elements/app/ix-blazor/ElementsComponents.blazor/App.razor
@@ -1,4 +1,4 @@
-﻿@using elementscomponents.blazor.Shared
+﻿@using ElementsComponents.blazor.Shared
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
