--- a/src/components.elements/app/ix-blazor/ElementsComponents.blazor/Pages/_Host.cshtml
+++ b/src/components.elements/app/ix-blazor/ElementsComponents.blazor/Pages/_Host.cshtml
@@ -2,7 +2,7 @@
 @using elementscomponents.blazor
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@namespace elementscomponents.blazor.Pages
+@namespace ElementsComponents.blazor.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
