--- a/src/templates.simple/axosimple.app/Components/UnitsData.razor
+++ b/src/templates.simple/axosimple.app/Components/UnitsData.razor
@@ -1,27 +1,51 @@
 ﻿@using AXOpen.Core;
 @using AXSharp.Connector
-@inherits RenderableComponentBase
+@inherits ComponentBase
 
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#dataviewmodal">
+    Data
+</button>
 
-
-<div id="my-div" class="card">
-    <div class="card-header">
-        Process Data
-    </div>
-    <div class="card-body">
-        <RenderableContentControl Context="@Entry.Plc.Context.ProcessDataPneumaticManipulator.Shared.Set" Presentation="Display" />
-        @*<RenderableContentControl Context="@Entry.Plc.Context.ProcessDataPneumaticManipulator.ProcessData.DataManger.Set" Presentation="Display" />*@
+<div class="modal fade" id="dataviewmodal" tabindex="-1" aria-labelledby="dataviewmodalTitle" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <div class="container">
+                    <div class="row">
+                        <h1 class="modal-title fs-5" id="dataviewmodalTitle">@Unit?.HumanReadable</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="row p-2">
+                        
+                    </div>
+                    <div class="row">
+                        <button type="button" class="btn btn-primary" @onclick="async () => await Data.OnlineToShadowAsync()">Refresh</button>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <div class="row">
+                        <RenderableContentControl Context="Entry.Plc.Context.ProcessDataPneumaticManipulator.DataManger.Set" Presentation="ShadowDisplay"/>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
+
 @code
 {
+    [Parameter]
+    public ITwinObject? Unit { get; set; }
+
     [Parameter]
     public ITwinObject? Data { get; set; }
 
     protected override void OnInitialized()
     {
         base.OnInitialized();
-        this.UpdateValuesOnChange(Data);
     }
 }
