--- a/src/templates.simple/axosimple.app/Components/Unit.razor
+++ b/src/templates.simple/axosimple.app/Components/Unit.razor
@@ -6,25 +6,42 @@
 @using AXOpen.Messaging.Static
 @using AXSharp.Connector;
 @using AXOpen.Core;
-
 @inject IAlertDialogService _alerts
-@inherits RenderableComplexComponentBase<ITwinObject>
+@inherits RenderableComplexComponentBase<examples.PneumaticManipulator.CU>
 
 <body>
     <div class="content-wrapper">
         <UnitsSequences Component="@this.Component"></UnitsSequences>
         <UnitsService ServiceTask="((dynamic)this.Component).ServiceMode" Components="((dynamic)this.Component).Components"></UnitsService>
-
-        @foreach (var message in Messengers)
-        {
-            if (message.IsActive.LastValue)
-            { 
-                <RenderableContentControl Context="message" Presentation="Base"></RenderableContentControl>
-            }
-        }
     </div>
 </body>
 
+
+<!-- Modal data alarms -->
+<div class="modal fade" id="alarmsviewmodal" tabindex="-1" aria-labelledby="alarmsviewTitle" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <div class="container">
+                    <div class="row">
+                        <h1 class="modal-title fs-5" id="alarmsviewTitle">Alarms</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <div class="row">
+                      <Alarms Component="this.Component"></Alarms>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Modal data window -->
 <div class="modal fade" id="dataviewmodal" tabindex="-1" aria-labelledby="dataviewmodalTitle" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
@@ -52,25 +69,50 @@
     </div>
 </div>
 
-<header class="footer bg-white text-white p-2 fixed-bottom" z-index="0">
+
+<!-- Modal data alarms -->
+<div class="modal fade" id="componentsviewmodal" tabindex="-1" aria-labelledby="componentsviewTitle" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <div class="container">
+                    <div class="row">
+                        <h1 class="modal-title fs-5" id="componentsTitle">Components</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <div class="row">
+                        <RenderableContentControl Context="this.Component?.Components" Presentation="Command-Control" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<footer class="footer bg-white text-white p-2 fixed-bottom">
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#dataviewmodal">
         Data
     </button>
-</header>
+    
+    <AlarmsButton Component="this.Component"></AlarmsButton>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#componentsviewmodal">
+        Components
+    </button>
+</footer>
 
-<AxoDialogLocator DialogId="custation001" ObservedObjects="new[] {this.Component}"></AxoDialogLocator>
+<AxoDialogLocator DialogId="@this.Component?.Symbol" ObservedObjects="new[] {this.Component}"></AxoDialogLocator>
 <AxoAlertDialogLocator ObservedObjects="new[] {this.Component}" />
 
 @code
 {
     private IEnumerable<AxoMessenger> Messengers => this.Component.GetChildren().Flatten(p => p.GetChildren()).OfType<AxoMessenger>();
 
-    private void Reset()
-    {
-        StateHasChanged();
-    }
-
     [Parameter]
     public ITwinObject? Data { get; set; }
+
 }
 
