minor fixes to ui, security and inspectors, added script for creating library templates

--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoAnalogueInspector/Shadow/AxoAnalogueInspectorShadowControlView.razor
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoAnalogueInspector/Shadow/AxoAnalogueInspectorShadowControlView.razor
@@ -6,7 +6,7 @@
 <InspectorViewTemplate Data="Component._data"
                        Name="@getNameOrSymbol()"
                        Presentation="ShadowControl"
-                       IsOverInspected="Component._axoInspectorDialog._isOverInspected.Cyclic" />
+                       IsOverInspected="Component._axoInspectorDialog._isOverInspected.Shadow" />
 
 
 
