--- a/src/template.axolibrary/app/ix-blazor/librarytemplate.blazor/Pages/_Host.cshtml
+++ b/src/template.axolibrary/app/ix-blazor/librarytemplate.blazor/Pages/_Host.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @using Microsoft.AspNetCore.Components.Web
-@namespace librarytemplate.blazor.Pages
+@namespace librarytemplate.blazorapp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
