--- a/src/security/src/AXOpen.Security.Blazor/Areas/Identity/Pages/Shared/_Layout.cshtml
+++ b/src/security/src/AXOpen.Security.Blazor/Areas/Identity/Pages/Shared/_Layout.cshtml
@@ -7,9 +7,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - InxtonBlazor.Authentication</title>
+    <title>@ViewData["Title"] - AX</title>
     <link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/Identity/css/site.css" />
 </head>
 <body>
     <header>
@@ -29,9 +28,6 @@
             @RenderBody()
         </main>
     </div>
-    <script src="~/Identity/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/Identity/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/Identity/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
