--- a/src/template.axolibrary/app/ix-blazor/librarytemplate.blazor/_Imports.razor
+++ b/src/template.axolibrary/app/ix-blazor/librarytemplate.blazor/_Imports.razor
@@ -7,8 +7,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using librarytemplate.blazor
-@using librarytemplate.blazor.Shared
+@using librarytemplate.blazorapp
+@using librarytemplate.blazorapp.Shared
 
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
 @using Microsoft.Extensions.Localization
