Refactor docs framework

--- a/src/data/app/ix-blazor/librarytemplate.blazor/Pages/Documentation.razor
+++ b/src/data/app/ix-blazor/librarytemplate.blazor/Pages/Documentation.razor
@@ -2,4 +2,4 @@
 
 <PageTitle>Documentation</PageTitle>
 
-<RenderableContentControl Context="@Entry.Plc.documentation" Presentation="Command-Control" PollingInterval="100"/>
+@*<RenderableContentControl Context="@Entry.Plc.documentation" Presentation="Command-Control" PollingInterval="100"/>*@
