--- a/src/data/app/ix-blazor/librarytemplate.blazor/App.razor
+++ b/src/data/app/ix-blazor/librarytemplate.blazor/App.razor
@@ -1,4 +1,5 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿@using librarytemplate.blazor.hmi.Shared;
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
