Inspection dialog removed from inspector

--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoAnalogueInspector/Online/AxoAnalogueInspectorStatusView.razor
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoAnalogueInspector/Online/AxoAnalogueInspectorStatusView.razor
@@ -6,8 +6,7 @@
 
 <InspectorViewTemplate Data="Component._data"
                        Name="@getNameOrSymbol()"
-                       Presentation="Display"
-                       IsOverInspected="Component._axoInspectorDialog._isOverInspected.Cyclic" />
+                       Presentation="Display" />
 
 
 
