--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoAnalogueInspector/Online/AxoAnalogueInspectorCommandView.razor
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoAnalogueInspector/Online/AxoAnalogueInspectorCommandView.razor
@@ -5,8 +5,7 @@
 
 <InspectorViewTemplate Data="Component._data"
                        Name="@getNameOrSymbol()"
-                       Presentation="Control"
-                       IsOverInspected="Component._axoInspectorDialog._isOverInspected.Cyclic" />
+                       Presentation="Control"/>
 
 
 
