--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoAnalogueInspector/Shadow/AxoAnalogueInspectorShadowDisplayView.razor
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoAnalogueInspector/Shadow/AxoAnalogueInspectorShadowDisplayView.razor
@@ -5,8 +5,7 @@
 
 <InspectorViewTemplate Data="Component._data"
                        Name="@getNameOrSymbol()"
-                       Presentation="ShadowDisplay"
-                       IsOverInspected="Component._axoInspectorDialog._isOverInspected.Shadow" />
+                       Presentation="ShadowDisplay" />
 
 
 
