--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoDataInspector/Shadow/AxoDataInspectorShadowControlView.razor
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoDataInspector/Shadow/AxoDataInspectorShadowControlView.razor
@@ -5,8 +5,7 @@
 
 <InspectorViewTemplate Data="Component._data"
                        Name="@getNameOrSymbol()"
-                       Presentation="ShadowControl"
-                       IsOverInspected="Component._axoInspectorDialog._isOverInspected.Shadow" />
+                       Presentation="ShadowControl"/>
 
 
 
