--- a/src/components.rexroth.drives/app/ix-blazor/axopencomponentsrexrothdrives.blazor/Pages/Testing.razor
+++ b/src/components.rexroth.drives/app/ix-blazor/axopencomponentsrexrothdrives.blazor/Pages/Testing.razor
@@ -3,4 +3,11 @@
 
 <PageTitle>Testing</PageTitle>
 
-<RenderableContentControl Context="@Entry.Plc.sandbox" Presentation="Command-Control" PollingInterval="100"/>
+
+
+<div class="col">
+    <RenderableContentControl Context="@Entry.Plc.sandbox._testDrive._isManuallyControllable" Presentation="Display" />
+</div>
+
+<RenderableContentControl Context="@Entry.Plc.sandbox" Presentation="Command-Control" PollingInterval="100" />
+
