fixes and refactors library template

--- a/src/template.axolibrary/app/ix-blazor/_Imports.razor
+++ b/src/template.axolibrary/app/ix-blazor/_Imports.razor
@@ -7,8 +7,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using librarytemplate.blazorapp
-@using librarytemplate.blazorapp.Shared
+@using projname.blazorapp
+@using projname.blazorapp.Shared
 
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
 @using Microsoft.Extensions.Localization
