--- a/src/template.axolibrary/app/ix-blazor/Pages/Error.cshtml
+++ b/src/template.axolibrary/app/ix-blazor/Pages/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model librarytemplate.blazor.Pages.ErrorModel
+@model projname.blazor.Pages.ErrorModel
 
 <!DOCTYPE html>
 <html lang="en">
