documentation template improvements

--- a/src/template.axolibrary/app/ix-blazor/Pages/Documentation.razor
+++ b/src/template.axolibrary/app/ix-blazor/Pages/Documentation.razor
@@ -1,5 +1,7 @@
 ﻿@page "/Documentation"
+@using AXOpen.Core;
 
-<PageTitle>Documentation</PageTitle>
+<Component_1></Component_1>
+<Component_2></Component_2>
 
-<RenderableContentControl Context="@Entry.Plc.documentation" Presentation="Command-Control" PollingInterval="100"/>
+
