--- a/src/templates.simple/axosimple.app/Pages/UI/ManipulatorExample.razor
+++ b/src/templates.simple/axosimple.app/Pages/UI/ManipulatorExample.razor
@@ -5,4 +5,8 @@
 @inject IAlertDialogService _alerts
 @inherits RenderableComplexComponentBase<examples.PneumaticManipulator.CU>
 
-<Unit Component="Entry.Plc.Context.PneumaticManipulator" Data="Entry.Plc.Context.ProcessDataPneumaticManipulator"></Unit>
+<Unit Component="Entry.Plc.Context.PneumaticManipulator" Data="Entry.Plc.Context.ProcessDataPneumaticManipulator">
+    <ChildContent>
+        <h2>Example of using ChildContent</h2>
+    </ChildContent>
+</Unit>
