--- a/src/templates.simple/axosimple.app/Pages/_Host.cshtml
+++ b/src/templates.simple/axosimple.app/Pages/_Host.cshtml
@@ -34,6 +34,7 @@
 
     @*Icons*@
     <link rel="stylesheet" href="css/open-iconic/font/css/open-iconic-bootstrap.min.css" />
+    <link rel="stylesheet" href="font/bootstrap-icons.min.css" />
     @*Custom site css*@
     <link href="css/site.css" rel="stylesheet" />
     @*Component css*@
@@ -59,6 +60,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="~/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
