--- a/src/templates.simple/axosimple.app/Shared/TopRow.razor.css
+++ b/src/templates.simple/axosimple.app/Shared/TopRow.razor.css
@@ -5,3 +5,9 @@
     display: flex;
     align-items: center;
 }
+
+@media (max-width: 769px) {
+    .IAmHereIndicator {
+        display: none;
+    }
+}
