update to apax 2.0.0 and updates ax sdk

--- a/src/templates.simple/axosimple.app/Pages/Units/ManipulatorExample.razor
+++ b/src/templates.simple/axosimple.app/Pages/Units/ManipulatorExample.razor
@@ -1,4 +1,4 @@
-﻿@page "/ui/ManipulatorExample"
+﻿@page "/Units/ManipulatorExample"
 @using AXOpen.Base.Dialogs;
 @using axosimple.hmi.Components;
 
@@ -7,6 +7,6 @@
 
 <Unit Component="Entry.Plc.Context.PneumaticManipulator" Data="Entry.Plc.Context.ProcessDataPneumaticManipulator">
     <ChildContent>
-        <h2>Example of using ChildContent</h2>
+        <img src="logo-header.svg"/>
     </ChildContent>
 </Unit>
