--- a/src/templates.simple/axosimple.app/Pages/Units/ManipulatorExample2.razor
+++ b/src/templates.simple/axosimple.app/Pages/Units/ManipulatorExample2.razor
@@ -1,4 +1,4 @@
-﻿@page "/ui/ManipulatorExample2"
+﻿@page "/Units/ManipulatorExample2"
 @using AXOpen.Core.Blazor.AxoDialogs;
 @using AXOpen.Core.Blazor.Dialogs
 @using axosimple.hmi.Components;
