--- a/src/templates.simple/axosimple.app/Pages/Index.razor
+++ b/src/templates.simple/axosimple.app/Pages/Index.razor
@@ -1,4 +1,28 @@
 ﻿@page "/"
+@using AXSharp.Connector
+@using axosimple.hmi.Components;
 
-<i class="bi-alarm" />
-<span class="bi-alarm" />
+
+<div class="container">
+    @foreach (var unit in Units)
+    {
+        <div class="row">
+            <div class="col">
+                <UnitSpotView Component="unit.unit" Link="@unit.link"/>
+            </div>
+        </div>
+            }
+</div>
+@code
+{
+    private IEnumerable<(ITwinObject unit, string link)> Units 
+    {
+        get { return new (ITwinObject, string)[] 
+            { 
+                (Entry.Plc.Context.PneumaticManipulator,"/Units/ManipulatorExample"),
+                (Entry.Plc.Context.PneumaticManipulator2,"/Units/ManipulatorExample2")
+            };
+        }
+    }
+
+}
