--- a/src/templates.simple/axosimple.app/Shared/NavMenu.razor
+++ b/src/templates.simple/axosimple.app/Shared/NavMenu.razor
@@ -7,12 +7,12 @@
         <nav class="flex-column">
             <MenuItem Name="Home" Link="/" Icon="oi oi-home" />
             <ExpandableMenuItem Name="UI" Icon="oi oi-align-center">
-                <MenuItem Name="Controlled unit example" Link="/ui/ManipulatorExample" Icon="oi oi-cog" />
-                <MenuItem Name="Controlled unit example 2" Link="/ui/ManipulatorExample2" Icon="oi oi-cog" />
-                <MenuItem Name="I/O" Link="/ui/Io" Icon="oi oi-cog" />
-                <MenuItem Name="Process data settings" Link="ui/ProcessData" Icon="oi oi-cog"></MenuItem>
+                <MenuItem Name="Controlled unit example" Link="/Units/ManipulatorExample" Icon="oi oi-cog" />
+                <MenuItem Name="Controlled unit example 2" Link="/Units/ManipulatorExample2" Icon="oi oi-cog" />
+                <MenuItem Name="I/O" Link="/Service/Io" Icon="oi oi-cog" />
+                <MenuItem Name="Process data settings" Link="Settings/ProcessData" Icon="oi oi-cog"></MenuItem>
                 <MenuItem Name="User administration" Link="/Security/UserAdministration" Icon="oi oi-person"></MenuItem>
-                <MenuItem Name="Settings" Link="/ui/Settings" Icon="oi oi-cog"></MenuItem>
+                <MenuItem Name="Settings" Link="/Settings/Settings" Icon="oi oi-cog"></MenuItem>
             </ExpandableMenuItem>
         </nav>
 
